deploy/kubernetes/base/api/arches-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: arches-api
  name: arches-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1 # Maximum pods that can be unavailable during the update
      maxSurge: 1 # Maximum additional pods that can be created during the update
  selector:
    matchLabels:
      component: arches-api
  template:
    metadata:
      labels:
        component: arches-api
    spec:
      securityContext:
        runAsUser: 1000 # Replace with actual UID
        runAsGroup: 1000 # Replace with actual GID
        fsGroup: 1000
      containers:
        - name: arches-api
          image: us-east4-docker.pkg.dev/archesai/images/arches-api
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
          readinessProbe: # define readiness probe
            httpGet:
              path: /swagger/json
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe: # define liveness probe
            httpGet:
              path: /swagger/json
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 20
      hostname: arches-api
      restartPolicy: Always
      serviceAccountName: arches-api-service-account
