deploy/kubernetes/base/api/arches-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arches-api-ingress
spec:
  rules:
    - host: api.archesai.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arches-api
                port:
                  number: 443
